# audiobook-creator

./: .env  SortedCollection.py  audiobook-creator.py  chatgpt-header-filter.py  content-filter.py  deepgram.py  filter_header.py  header_filter.py  main-new.py  main-orig.py  main.py  myfilter.py  pdf-to-mp3.py  pdf-to-mp31.py  pdf2mp3.py  perplexity-filter-headers.py  pyproject.toml  pyproject.toml.subl  skip-start-end.py  toc_check.py
Python_Crash_Course_3rd_Edition_chunks/: Python_Crash_Course_3rd_Edition_chunk_1.txt  Python_Crash_Course_3rd_Edition_chunk_101.txt  Python_Crash_Course_3rd_Edition_chunk_102.txt  Python_Crash_Course_3rd_Edition_chunk_103.txt  Python_Crash_Course_3rd_Edition_chunk_106.txt  Python_Crash_Course_3rd_Edition_chunk_107.txt  Python_Crash_Course_3rd_Edition_chunk_108.txt  Python_Crash_Course_3rd_Edition_chunk_11.txt  Python_Crash_Course_3rd_Edition_chunk_111.txt  Python_Crash_Course_3rd_Edition_chunk_112.txt  Python_Crash_Course_3rd_Edition_chunk_113.txt  Python_Crash_Course_3rd_Edition_chunk_116.txt  Python_Crash_Course_3rd_Edition_chunk_117.txt  Python_Crash_Course_3rd_Edition_chunk_118.txt  Python_Crash_Course_3rd_Edition_chunk_12.txt  Python_Crash_Course_3rd_Edition_chunk_121.txt  Python_Crash_Course_3rd_Edition_chunk_122.txt  Python_Crash_Course_3rd_Edition_chunk_123.txt  Python_Crash_Course_3rd_Edition_chunk_126.txt  Python_Crash_Course_3rd_Edition_chunk_127.txt  Python_Crash_Course_3rd_Edition_chunk_128.txt  Python_Crash_Course_3rd_Edition_chunk_13.txt  Python_Crash_Course_3rd_Edition_chunk_131.txt  Python_Crash_Course_3rd_Edition_chunk_132.txt  Python_Crash_Course_3rd_Edition_chunk_133.txt  Python_Crash_Course_3rd_Edition_chunk_136.txt  Python_Crash_Course_3rd_Edition_chunk_137.txt  Python_Crash_Course_3rd_Edition_chunk_138.txt  Python_Crash_Course_3rd_Edition_chunk_141.txt  Python_Crash_Course_3rd_Edition_chunk_142.txt  (+267 more)
(+170 files in other folders)
