[project]
name = "audiobook-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "audioop-lts>=0.2.1",
    "deepgram-sdk>=3.7.7",
    "pip>=24.3.1",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
]
