[project]
name = "audiobook-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "audioop-lts>=0.2.1",
    "deepgram-sdk>=3.7.7",
    "ipython>=8.30.0",
    "numpy>=2.2.4",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pdfminer-six[image]>=20240706",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "pydub>=0.25.1",
    "pymupdf>=1.25.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.12.2",
    "thefuzz[speedup]>=0.22.1",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
